input field for file upload no longer overlaps with other elements when it's a long string

--- a/client/src/styles/_base.scss
+++ b/client/src/styles/_base.scss
@@ -40,3 +40,8 @@ button,
   margin: 0;
   // overflow-x: hidden;
 }
+
+.custom-file {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
